[gd_scene load_steps=5 format=3 uid="uid://c4oey4snx5e2g"]

[ext_resource type="Script" path="res://scripts/ui/settings_panel.gd" id="1_ukug2"]
[ext_resource type="Texture2D" uid="uid://c7s268c57t5tp" path="res://textures/ui/button-icon-settings.png" id="2_et0jb"]
[ext_resource type="AudioStream" uid="uid://bxnyumykdx7jl" path="res://audio/ui/button-hover.wav" id="3_1yvqa"]
[ext_resource type="AudioStream" uid="uid://bu8idqu7o3j56" path="res://audio/ui/button-click.wav" id="4_ksdpn"]

[node name="Settings" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ukug2")

[node name="Icon" type="TextureRect" parent="."]
modulate = Color(0.396078, 0.388235, 0.54902, 1)
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("2_et0jb")

[node name="Heading" type="Label" parent="."]
layout_mode = 1
offset_left = 72.0
offset_top = 24.0
offset_right = 240.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 33
text = "Settings"

[node name="Summary" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 480.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0.603922, 0.603922, 0.737255, 1)
text = "Changes are saved automatically."

[node name="SubheadingGameplay" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 136.0
offset_right = 480.0
offset_bottom = 178.0
text = "Gameplay"

[node name="CheckBoxDisableHints" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 176.0
offset_right = 234.0
offset_bottom = 216.0
text = "Disable hints"

[node name="ButtonReturn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -64.0
offset_right = 286.0
offset_bottom = -24.0
grow_vertical = 0
text = "Return"

[node name="Audio" type="Label" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 136.0
offset_right = 632.0
offset_bottom = 164.0
text = "Audio"

[node name="MasterVolume" type="Label" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 184.0
offset_right = 704.0
offset_bottom = 212.0
text = "Master volume"

[node name="MasterVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 216.0
offset_right = 867.0
offset_bottom = 240.0
max_value = 1.0
step = 0.01

[node name="MusicVolume" type="Label" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 248.0
offset_right = 704.0
offset_bottom = 276.0
text = "Music volume"

[node name="MusicVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 280.0
offset_right = 867.0
offset_bottom = 304.0
max_value = 1.0
step = 0.01

[node name="UIVolume" type="Label" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 312.0
offset_right = 704.0
offset_bottom = 340.0
text = "UI volume"

[node name="UIVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 344.0
offset_right = 867.0
offset_bottom = 368.0
max_value = 1.0
step = 0.01

[node name="CatsVolume" type="Label" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 376.0
offset_right = 704.0
offset_bottom = 404.0
text = "Cats volume"

[node name="CatsVolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 504.0
offset_top = 408.0
offset_right = 867.0
offset_bottom = 432.0
max_value = 1.0
step = 0.01

[node name="ButtonHoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1yvqa")
pitch_scale = 1.5
bus = &"UI"

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ksdpn")
pitch_scale = 2.13
bus = &"UI"

[connection signal="toggled" from="CheckBoxDisableHints" to="." method="_on_button_pressed"]
[connection signal="toggled" from="CheckBoxDisableHints" to="." method="_on_check_box_disable_hints_toggled"]
[connection signal="mouse_entered" from="ButtonReturn" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ButtonReturn" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonReturn" to="." method="_on_button_return_pressed"]
[connection signal="drag_started" from="MasterVolumeSlider" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="UIVolumeSlider" to="." method="_on_ui_volume_slider_value_changed"]
[connection signal="value_changed" from="CatsVolumeSlider" to="." method="_on_cats_volume_slider_value_changed"]
